; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_edit.c_ET2_check_change.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_edit.c_ET2_check_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXLEN = common dso_local global i32 0, align 4
@hwndET2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"bar\00", align 1
@WM_SETTEXT = common dso_local global i32 0, align 4
@EM_SETSEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ET2_check_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ET2_check_change() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @MAXLEN, align 4
  %4 = zext i32 %3 to i64
  %5 = call i8* @llvm.stacksave()
  store i8* %5, i8** %1, align 8
  %6 = alloca i8, i64 %4, align 16
  store i64 %4, i64* %2, align 8
  %7 = load i32, i32* @hwndET2, align 4
  %8 = load i32, i32* @MAXLEN, align 4
  %9 = call i32 @GetWindowTextA(i32 %7, i8* %6, i32 %8)
  %10 = call i64 @strcmp(i8* %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %0
  %13 = call i32 @strcpy(i8* %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i32, i32* @hwndET2, align 4
  %15 = load i32, i32* @WM_SETTEXT, align 4
  %16 = ptrtoint i8* %6 to i32
  %17 = call i32 @SendMessageA(i32 %14, i32 %15, i32 0, i32 %16)
  br label %18

18:                                               ; preds = %12, %0
  %19 = load i32, i32* @hwndET2, align 4
  %20 = load i32, i32* @EM_SETSEL, align 4
  %21 = load i32, i32* @MAXLEN, align 4
  %22 = sub nsw i32 %21, 1
  %23 = load i32, i32* @MAXLEN, align 4
  %24 = sub nsw i32 %23, 1
  %25 = call i32 @SendMessageA(i32 %19, i32 %20, i32 %22, i32 %24)
  %26 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %26)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GetWindowTextA(i32, i8*, i32) #2

declare dso_local i64 @strcmp(i8*, i8*) #2

declare dso_local i32 @strcpy(i8*, i8*) #2

declare dso_local i32 @SendMessageA(i32, i32, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
